--- a/app/views/layouts/primary_models/_record_list.html.erb
+++ b/app/views/layouts/primary_models/_record_list.html.erb
@@ -36,7 +36,7 @@
           <div class="<%= record.class.to_s.downcase %>">
             <div class="image"><%= primary_image_helper(record, record, "thumb", :square => true, :outline => true) %></div>
             <div class="name album-name">
-              <h4><%= link_to name_language_helper(record,current_user,0), record %></h4>
+              <h4><%= link_to language_helper(record, :name), record %></h4>
               <div class="tags"><%= linked_attribute_display(record.tags, '') %></div>
             </div>
             <div class="date"><%= date_helper(record, 'release_date', :calendar_link => false)%></div>
@@ -48,15 +48,15 @@
             <% if record.album.nil? %>
               <div class="image"><%= primary_image_helper(record, record, "thumb", :square => true, :outline => true) %></div>
               <div class="name song-name">
-                <h4><%= link_to name_language_helper(record,current_user,0), record %></h4>
+                <h4><%= link_to language_helper(record, :name), record %></h4>
                 <div class="tags"><%= linked_attribute_display(record.tags, '') %></div>          
               </div>
               <div class="date"></div>
             <% else %>
               <div class="image"><%= primary_image_helper(record.album, record.album, "thumb", :square => true, :outline => true) %></div>
               <div class="name song-name">
-                <h4><%= link_to "#{record.disc_track_number unless record.track_number.nil?} #{name_language_helper(record,current_user,0)}", record.album %></h4>
-                <h5>Album: <%= link_to name_language_helper(record.album,current_user,0), record.album %></h5>        
+                <h4><%= link_to "#{record.disc_track_number unless record.track_number.nil?} #{language_helper(record, :name)}", record.album %></h4>
+                <h5>Album: <%= link_to language_helper(record.album, :name), record.album %></h5>        
                 <h5><%= "Duration: #{record.length_as_time}" unless record.length.nil? || record.length == 0 %></h5>
                 <div class="tags"><%= linked_attribute_display(record.tags, '') %></div>          
               </div>
@@ -68,7 +68,7 @@
         <div class="record-container">
           <div class="<%= record.class.to_s.downcase %>">
             <div class="name">
-              <h4><%= link_to name_language_helper(record,current_user,0), record %></h4>
+              <h4><%= link_to language_helper(record, :name), record %></h4>
               <div class="tags"><%= linked_attribute_display(record.tags, '') %></div>
             </div>
             <div class="albums">
