--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,35 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @song.name %>
-</p>
-
-<p>
-  <b>Namehash:</b>
-  <%= @song.namehash %>
-</p>
-
-<p>
-  <b>Album:</b>
-  <%= link_to name_language_helper(@song.album,current_user,0), @song.album %>
-</p>
-
-<p>
-  <b>Tracknumber:</b>
-  <%= @song.track_number %>
-</p>
-
-<p>
-  <b>Length:</b>
-  <%= @song.length %>
-</p>
-
-<p>
-  <b>Lyrics:</b>
-  <%= @song.lyrics %>
-</p>
-
-
-<%= link_to 'Edit', edit_song_path(@song) %> |
-<%= link_to 'Back', songs_path %>
+<%= render :partial => "layouts/primary_models/show", locals: {record: @song}%>
