--- a/app/views/layouts/forms/_edit.html.erb
+++ b/app/views/layouts/forms/_edit.html.erb
@@ -1,8 +1,8 @@
-<% content_for :title do %>Edit - <%= name_language_helper(record,current_user,0, no_bold: true) %><% end %>
+<% content_for :title do %>Edit - <%= language_helper(record, :name, highlight: false) %><% end %>
 
 <% content_for :header do %>
   <div class="text-center">
-    <h2>Edit <%= record.class%>: <%= link_to name_language_helper(record,current_user,0, no_bold: true), record %></h2>
+    <h2>Edit <%= record.class%>: <%= link_to language_helper(record, :name, highlight: false), record %></h2>
   </div>
 <% end %>
 
