--- a/app/views/layouts/forms/fields/_related_model.html.erb
+++ b/app/views/layouts/forms/fields/_related_model.html.erb
@@ -5,7 +5,7 @@
     <% record.send("#{opts[:relation_model]}").each do |relation| %>
       <div>
         <%= check_box_tag "#{form_prefix}[remove_#{opts[:relation_model]}][]", relation.id %>
-        <%= link_to relation.send(opts[:model]).name, relation.send(opts[:model])%>
+        <%= link_to relation.send(opts[:model]).internal_name, relation.send(opts[:model])%>
         <% unless opts[:categories].nil? %>
           <%= fields_for "#{form_prefix}[update_#{opts[:relation_model]}][#{relation.id}]" do |f| %>
             <%= f.select 'category', opts[:categories], selected: relation.category %>
