--- a/app/views/layouts/grid/_album.html.erb
+++ b/app/views/layouts/grid/_album.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   <% end %>
   <div class="album-footer text-center">
-    <%= link_to name_language_helper(album,current_user,0), album %>
+    <%= link_to language_helper(album, :name), album %>
     <%= album.release_date.strftime('%B %-d, %Y') %>     
   </div>
 </div>
