--- a/app/views/posts/_display_post.html.erb
+++ b/app/views/posts/_display_post.html.erb
@@ -5,7 +5,7 @@
       <%= post.created_at.strftime("Posted on %B %-d, %Y") %>
       <% unless post.tags.empty? %>
         | Tagged: <% post.tags.each do |tag| %>
-          <%= link_to tag.name, tag%>
+          <%= link_to language_helper(tag, :name), tag%>
         <% end %>
       <% end %>
     </div> 
