--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
         <div class="panel-heading">Tags</div>
         <div class="nav nav-pills nav-stacked">
           <% Tag.with_model("Post").each do |tag| %>
-            <li><%= link_to "#{tag.name} (#{@all_posts.has_tag(tag.id).count})", posts_path(tags: tag) %></li>
+            <li><%= link_to "#{language_helper(tag, :name)} (#{@all_posts.has_tag(tag.id).count})", posts_path(tags: tag) %></li>
           <% end %>
         </div>
       </div>
