--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -15,7 +15,7 @@
       <div class="col-md-3">
         <h4 class="text-center"><%= k %> Tags</h4>
         <% v.each do |tag| %>
-          <div class="text-center"><%= link_to "#{tag.name} (#{tag.taglists.count})", tag %></div>
+          <div class="text-center"><%= link_to "#{language_helper(tag, :name)} (#{tag.taglists.count})", tag %></div>
         <% end %>      
       </div>
     <% if (n + 1).multiple_of?(4) %>
