--- a/app/views/layouts/forms/fields/_source_relations.html.erb
+++ b/app/views/layouts/forms/fields/_source_relations.html.erb
@@ -21,5 +21,5 @@
                                             field_names: "#{form_prefix}[new_sources][ids]", 
                                             category_field_names: "#{form_prefix}[new_sources][classification]", 
                                             category_select: [""] + SongSource::Relationship, 
-                                            song_source: form_prefix, autocomplete_path: "source_namehash" ), :remote => true %></br></br>     
+                                            song_source: form_prefix, autocomplete_model: "source" ), :remote => true %></br></br>     
 </div>
