--- a/app/views/layouts/forms/_edit.html.erb
+++ b/app/views/layouts/forms/_edit.html.erb
@@ -1,8 +1,10 @@
-<% content_for :title do %>Edit - <%= language_helper(record, :name, highlight: false) %><% end %>
+<% content_for :title do %>Edit - <%= record.class == Post ? language_helper(record, :title, highlight: false) : language_helper(record, :name, highlight: false) %><% end %>
 
 <% content_for :header do %>
   <div class="text-center">
-    <h2>Edit <%= record.class%>: <%= link_to language_helper(record, :name, highlight: false), record %></h2>
+    <h2>
+      Edit <%= record.class%>: <%= link_to (record.class == Post ? language_helper(record, :title, highlight: false) : language_helper(record, :name, highlight: false)), record %>
+    </h2>
   </div>
 <% end %>
 
