--- a/app/views/pages/front_page.html.erb
+++ b/app/views/pages/front_page.html.erb
@@ -16,7 +16,7 @@
       <div class="panel">
         <div class="panel-heading">About the author</div>
         <div class="panel-body">
-          The author loves anime music so much, he built a database to keep track of it.
+          Just someone who really likes japanese music a lot.
         </div>
       </div>
     </div>
