added get to rescrape

--- a/app/views/layouts/primary_models/_show.html.erb
+++ b/app/views/layouts/primary_models/_show.html.erb
@@ -8,7 +8,7 @@
     <h4>
       <% unless language_helper(record,:name, priority: 1) == language_helper(record,:name) %>
         <%= language_helper(record,:name, highlight: false, priority: 1) %>
-        <% unless language_helper(record,:name, highlight: false, priority: 2).nil? %>
+        <% unless language_helper(record,:name, highlight: false, priority: 2).nil? ||  language_helper(record,:name, priority: 2) == language_helper(record,:name, priority: 1) ||  language_helper(record,:name, priority: 2) ==  language_helper(record,:name)%>
           / <%= language_helper(record,:name, highlight: false, priority: 2) %>
         <% end %>
       <% end %>
