fixed a few things

--- a/app/views/layouts/forms/fields/_profile_settings.html.erb
+++ b/app/views/layouts/forms/fields/_profile_settings.html.erb
@@ -1,5 +1,6 @@
 <%= fields_for form_prefix, record do |f| %>
   <div class="single-form">
+    <p id="notice"><%= notice %></p>
     <div class="section-header"><h3>Language</h3></div>  
     <div class="section-content">
       <div class="form-language">
