--- a/app/views/layouts/primary_models/_show.html.erb
+++ b/app/views/layouts/primary_models/_show.html.erb
@@ -66,7 +66,7 @@
           <%= reference_helper(record) %>
           <%= linked_attribute_display(record.events, "Events") if record.class == Album %>
           <%= linked_attribute_display(record.seasons, "Season") if record.class == Source%>
-          <%= linked_attribute_display(record.tags, "Tags") %>
+          <%= linked_attribute_display(record.tags.meets_security(current_user), "Tags") %>
           <%= attribute_display(@album, "created_at", "Created at" ) if record.class == Album && (can? :manage, Album) %>
         </div>
       </div>      
