--- a/app/views/layouts/forms/fields/_language_fields.html.erb
+++ b/app/views/layouts/forms/fields/_language_fields.html.erb
@@ -7,17 +7,30 @@
         <% unless v.blank? %>
           <div>
             <%= language.label k, "#{k} #{opts[:attribute]}:" %>
-            <%= language.text_field k, value: v, class: 'input-xlarge' %>
+            <% if opts[:attribute] == :lyrics || opts[:attribute] == :info %>
+              <br><%= language.text_area k, value: v, rows: 2, class: 'col-md-12' %>
+            <% else %>
+              <%= language.text_field k, value: v, class: 'input-xlarge' %>
+            <% end %>
           </div>
         <% end %>
       <% end %>
     <% end %>
   <% end %>
   <div id="<%= "#{opts[:attribute]}LangFields#{record.id.to_s}" %>"></div>
-  <%= link_to "Add another #{opts[:attribute]} language", 
-  add_model_path(:parent_div => "##{opts[:attribute]}LangFields#{record.id.to_s}", 
-  category_field_names: "#{form_prefix}[new_#{opts[:attribute]}_lang_categories]", 
-  category_select: User::LocaleLanguages, 
-  label: opts[:attribute].capitalize,
-  field_names: "#{form_prefix}[new_#{opts[:attribute]}_langs]"), :remote => true %></br></br>          
+  <% if opts[:attribute] == :lyrics || opts[:attribute] == :info %>
+    <%= link_to "Add another #{opts[:attribute]} language", 
+    add_model_path(:parent_div => "##{opts[:attribute]}LangFields#{record.id.to_s}", 
+    category_field_names: "#{form_prefix}[new_#{opts[:attribute]}_lang_categories]", 
+    category_select: User::LocaleLanguages, 
+    label: opts[:attribute].capitalize,
+    text_area_field_names: "#{form_prefix}[new_#{opts[:attribute]}_langs]"), :remote => true %></br></br>   
+  <% else %>
+    <%= link_to "Add another #{opts[:attribute]} language", 
+    add_model_path(:parent_div => "##{opts[:attribute]}LangFields#{record.id.to_s}", 
+    category_field_names: "#{form_prefix}[new_#{opts[:attribute]}_lang_categories]", 
+    category_select: User::LocaleLanguages, 
+    label: opts[:attribute].capitalize,
+    field_names: "#{form_prefix}[new_#{opts[:attribute]}_langs]"), :remote => true %></br></br>     
+  <% end %>       
 </div>
