added some scraping log messages

--- a/app/views/layouts/grid/_filter_sort_sidebar.html.erb
+++ b/app/views/layouts/grid/_filter_sort_sidebar.html.erb
@@ -63,7 +63,7 @@
       <% Tag.with_model("Album").meets_security(current_user).each do |tag| %>
         <div class="filter-item">
           <span class="glyphicon"></span>
-          <%= link_to tag.name, tag, data: {:tag => tag.id}, remote: true %>
+          <%= link_to language_helper(tag, :name), tag, data: {:tag => tag.id}, remote: true %>
         </div>
       <% end %>
     </div>
