--- a/app/views/layouts/primary_models/_show.html.erb
+++ b/app/views/layouts/primary_models/_show.html.erb
@@ -160,7 +160,7 @@
       <div id="tracklist" class="info">
         <h3>Tracklist</h3>
         <% record.songs.each do |song| %>
-          <div class="song">
+          <div class="song" id="song-<%= song.id %>">
             <div class="track_number"><%= song.disc_track_number %></div>
             <div class="track_name"><%= language_helper(song,:name) %></div>
             <div class="track_duration"><%= song.length_as_time %></div>
