--- a/app/views/scripts/remove_tag.js.erb
+++ b/app/views/scripts/remove_tag.js.erb
@@ -1,1 +1,1 @@
-$('div#<%= "Tags" + @recordid.to_s %> .<%= "Tag" + @tagid.to_s %>').html('Removed');
+$('div#<%= "Tags" + @record_id.to_s %> .<%= "Tag" + @tag_id.to_s %>').html('<%= @msg %>');
